@@ -43,7 +43,7 @@ namespace JambageCom\Agency\Controller;
  *
  *
  */
-use TYPO3\CMS\Core\Database\Repository\PageRepository;
+use TYPO3\CMS\Core\Domain\Repository\PageRepository;
 use TYPO3\CMS\Core\SingletonInterface;
 use TYPO3\CMS\Core\Service\MarkerBasedTemplateService;
 use TYPO3\CMS\Core\Utility\ExtensionManagementUtility;
