@@ -25,8 +25,8 @@ namespace JambageCom\Agency\Hooks;
 *  This copyright notice MUST APPEAR in all copies of the script!
 */
 
+use TYPO3\CMS\Core\Domain\Repository\PageRepository;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
-use TYPO3\CMS\Frontend\Page\PageRepository;
 
 use JambageCom\Agency\Configuration\ConfigurationStore;
 use JambageCom\Agency\Controller\Setfixed;
